index.css
:root {
   --mainbgcolor: #FFF;
   --maintxtcolor: #666;
   --databarbgcolor: #444;
   --databartxtcolor: #AAA;
   --databartxthovcolor: #CCC;
   --headercolor: #333;
   --imageopacity: 1;
   --inputbgcolor: rgba(255,255,255,0.9);
   --lightblockbgcolor : rgba(128,128,128,0.05);
   --blockbgcolor: rgba(128,128,128,0.1);
   --outlinecolor : rgba(128,128,128,0.1);
   --tableoutlinecolor: rgba(128,128,128,0.2);
   --mutedtextcolor : rgba(128,128,128, 0.7);
   --tabselectbg: rgba(128,255,240,0.4);
   --tabhoverbg: rgba(128,255,240,0.1);
   --tabselectcolor: #222;
   --linkcolor: #1e87f0;

   --scrollblockcolor: rgba(128,128,128,0.3);
   --scrollblockhovercolor: rgba(128,128,128,0.5);

   --spcontrolbg: rgba(113, 164, 255, 0.3);

   --bgred: rgba(255,50,50,0.3); 
   --bgblue: rgba(50,150,255,0.3); 
   --bggreen: rgba(50,255,50,0.3); 
   --bgyellow: rgba(255,255,50,0.3); 
   --bgorange: rgba(255,150,50,0.3); 
   --bggray: rgba(128,128,128,0.1); 
   --bgpurple: rgba(200,50,255,0.3); 

   --codestatement: #56e8e1;
   --codestring: #d86161;
   --codenumber: #ce4a90;
   --codekeyword: #41a9ff;
   --codecomment: #86c367;
   --codevariable: #aa76d2;
   --codefunction: #777bec;
   --codeoperator: #777;
   --codelabel: #e68225;
   --codeconstant: #7caee2;
}
body {
   position: fixed; /*absolute;*/
   top: 0; bottom: 0; left: 0; right: 0;
   overflow: hidden;
}
button > *, a > * { pointer-events: none; }

/* Some theming stuff */
html, body, .uk-modal-dialog, .uk-dropdown {
   background-color: var(--mainbgcolor);
   color: var(--maintxtcolor);
}
.databar, .databar a {
   background-color: var(--databarbgcolor);
   color: var(--databartxtcolor);
}
.databar a:hover { 
   color: var(--databartxthovcolor); 
}
h1, h2, h3, h4, h5, h6, .uk-text-emphasis, .uk-description-list>dt,
.uk-accordion-title, .uk-form-label, .myinput { 
   color: var(--headercolor) !important;
}
img { 
   image-rendering: -webkit-optimize-contrast; 
   opacity: var(--imageopacity);
}
pre, .uk-input, .uk-search-input, .uk-select, .uk-textarea, .uk-button-default,
.myinput {
   background-color: var(--inputbgcolor) !important; /* TODO: do this WITHOUT important */
   border: 1px solid var(--outlinecolor) !important;
   color: inherit;
}
.uk-heading-divider {
   border-bottom: calc(.2px + .05em) solid rgba(128,128,128,0.2);
}
.uk-input:focus, .uk-select:focus, .uk-textarea:focus {
   color: var(--headercolor);
   background-color: var(--inputbgcolor);
   border: 1px solid #1e87f0 !important;
   /*filter: contrast(1.2);*/
}
.hover:hover {
   background-color: var(--lightblockbgcolor);
}
/* UIkit reconfiguring */
code { 
   max-width: 100%;
   white-space: pre-wrap !important; 
   background-color: var(--lightblockbgcolor) !important;
   display: inline-block;
   color: #789 !important;
}
blockquote { 
   background-color: var(--lightblockbgcolor) !important;
   margin-bottom: 0.4em; 
   font-size: 1.0em;
   line-height: 1.5;
   padding: 0.5em 0.65em;
   display: block;
   border-radius: 0.5em;
   color: inherit;
}
.content h1, .content h2, .content h3 {
   margin-top: 10px;
   margin-bottom: 10px;
}
.content h4, .content h5, .content h3 {
   margin-top: 0px;
}
.uk-button-default:focus, .uk-button-default:hover,
.uk-checkbox {
   background-color: rgba(255,255,255,0.1);
   border: 1px solid rgba(128,128,128, 0.3);
   color: inherit;
}
.uk-modal {
   z-index: 1030; /* WARN: this puts them above dropdowns! */
}
.uk-modal-header {
   background-color: var(--lightblockbgcolor);
   border-bottom: 1px solid var(--outlinecolor);
}
.uk-modal-footer {
   background-color: var(--lightblockbgcolor);
   border-top: 1px solid var(--outlinecolor);
}
.uk-text-meta { color: var(--mutedtextcolor); }
.uk-card-default {
   box-shadow: none;
   border: 1px solid var(--outlinecolor);
   background-color: var(--mainbgcolor);
}
.uk-link, a { color: var(--linkcolor); }
.uk-modal h3 { margin-top: 25px; } /* Reduce margin top wow */
.uk-sortable-empty { min-height: unset; }
/*.uk-link { cursor: pointer; }*/
hr { border-top: 1px solid var(--tableoutlinecolor); }
/* a { overflow: hidden; }*/
.notext { font-size: 0; } /*display: contents; }*/
.noselect {
  -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none; /* Safari */
     -khtml-user-select: none; /* Konqueror HTML */
       -moz-user-select: none; /* Old versions of Firefox */
        -ms-user-select: none; /* Internet Explorer/Edge */
            user-select: none; /* Non-prefixed version, currently
                                  supported by Chrome, Edge, Opera and Firefox */
}
audio {
   height: 30px;
   display: block;
   max-width: 100%;
}
/* Stuff that should probably be taken over by uikit */
/*input[type="file"] { cursor: pointer; }*/
a:hover { color: inherit; }
.noevent { pointer-events: none; }
.uk-list-divider>:nth-child(n+2) {
   margin-top: 0;
   padding-top: 0.45em; /* TODO: this is a repeat! */
   border-top: 1px solid var(--outlinecolor);
}
/* Basic page structure */
#website:not([data-loggedin]) [data-loginonly],
#website[data-loggedin] [data-logoutonly],
#website:not([data-issuper="true"]) [data-superonly],
#leftpane:not([data-permissions*="C"]) [data-createonly],
#leftpane:not([data-permissions*="U"]) [data-updateonly],
#leftpane:not([data-permissions*="D"]) [data-deleteonly],
.contentpage:not([data-pinned="false"]) [data-unpinnedonly], 
.contentpage:not([data-pinned="true"]) [data-pinnedonly] 
{ display: none !important; }

.databar { padding: 0 0.1em; }
[data-connectionindicator="error"] { 
   filter: hue-rotate(180deg); 
   transform: rotate(15deg);
}
#leftpane { }
#rightpane {
   background-color: var(--lightblockbgcolor);
   border-left: 2px solid var(--outlinecolor);
   width: 30em;
   max-width: calc(100vw - 1px);
   min-width: 15em;
}
#rightpane[data-condensed] .uk-container {
   padding-left: 10px;
   padding-right: 10px;
}
/*[data-checkinglogin] #userpane {
   filter: blur(1px) opacity(0.5);
}*/
/* ... */

